// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> when checked is false matches the snapshot 1`] = `
<div>
  <Field
    checked={false}
    component={[Function]}
    index={1}
    name="Name"
    onCheckboxClick={[Function]}
    value={false}
  />
</div>
`;

exports[`<Checkbox /> when checked is true matches the snapshot 1`] = `
<div>
  <Field
    checked={true}
    component={[Function]}
    index={1}
    name="Name"
    onCheckboxClick={[Function]}
    value={false}
  />
</div>
`;

exports[`<Checkbox /> when variant is addSub matches the snapshot 1`] = `
<div>
  <Field
    checked={true}
    component={[Function]}
    index={1}
    name="Name"
    onCheckboxClick={[Function]}
    value={false}
    variant="addSub"
  />
</div>
`;

exports[`<Checkbox /> with label matches the snapshot 1`] = `
<div>
  <Field
    checked={true}
    component={[Function]}
    index={1}
    label="Label"
    name="Name"
    onCheckboxClick={[Function]}
    value={false}
  />
</div>
`;
